intro and biblio progress

--- a/protva2016.tex
+++ b/protva2016.tex
@@ -22,14 +22,21 @@
 их прототипов.
 \end{abstract}
 
-\section{Обзор и введение}
-В предыдущей работе [1] показано, что понятие \textit{обратной совместимости}
+\section{Введение}
+В предыдущей % неоплаченной
+работе \cite{Tourbin2010} показано, что понятие \textit{обратной совместимости}
 часто является обманчивым; для достижения реальной \textit{бинарной
 совместимости} между библиотеками и программами (ABI) нужно контролировать
-не только и не столько версии библиотек, сколько \textit{разрешимость символов}
-(т.\,е. наличие нужных функций в библиотеках).  Там же обсуждается, насколько
+не только и не столько придуманные версии библиотек, сколько \textit{разрешимость символов}
+(т.\,е. фактическое наличие нужных функций в библиотеках).  Там же обсуждается, насколько
 компактным может быть вероятностное представление множеств, при котором каждый
-символ представлен $n$-битным хешем.
+символ представлен $n$-битным хешем.  Вскоре был найден и способ кодирования:
+\textit{код Голомба--Райса} обеспечивает оптимальное сжатие дельт (расстояний)
+между соседними хешами \cite{Putze2007}.  Таким образом, у библиотек в репозитории появились
+зависимости вида \texttt{Provides: libfoo.so.1~= set:...}, а у программ~---
+\texttt{Reqruies: libfoo.so.1~>=~set:...} (где вместо троеточия идет закодированная
+последовательность хешей).  При сравнении таких \textit{set-версий} rpm выполняет проверку
+$R\subseteq P$.
 
 \section{Типизация}
 \section{Сопоставление}
@@ -37,9 +44,18 @@
 
 \begin{thebibliography}{9}
 
-\bibitem{2}
-Ulrich Drepper. \textit{How To Write Shared Libraries.}\\
-\url{https://www.akkadia.org/drepper/dsohowto.pdf}
+\bibitem{Tourbin2010}
+Алексей Турбин.  Комплементарное хеширование подмножеств~//
+Седьмая конференция разработчиков свободных программ.
+Тезисы докладов. М.,~2010. С.\,63--66.
+
+\bibitem{Putze2007}
+Felix Putze, Peter Sanders, Johannes Singler (2007)\\
+Cache-, Hash- and Space-Efficient Bloom Filters
+
+\bibitem{dsohowto}
+Ulrich Drepper. How To Write Shared Libraries\\
+\url{www.akkadia.org/drepper/dsohowto.pdf}
 
 \end{thebibliography}
 
