--- a/protva2016.tex
+++ b/protva2016.tex
@@ -38,6 +38,25 @@
 последовательность хешей).  При сравнении таких \textit{set-версий} rpm выполняет проверку
 $R\subseteq P$.
 
+После этого было реализовано автоматическое создание \verb|debuginfo|-пакетов,
+а пакеты в репозитории стали компилироваться с флагом \verb|-g|~--- с отладочной информацией
+в формате DWARF.  Там содержится описание переменных и функций, в том числе аргументов
+функций и их типов.  Используя эту информацию, символы можно наделить \textit{типом};
+тогда при сравнении множеств будет проверяться не только разрешимость символов по имени,
+но и совпадение их типов (для функций~--- прототипов).  Это напоминает
+декорирование имен (name mangling) в C++, где к имени функции добавляется информация
+об аргументах.  В обоих случаях типизация является \textit{атомарной}: возможно только
+полное совпадение; никакой дальнейшей структуры в типизированных символах не усматривается.
+Если символ меняет свой тип, хотя бы и условно совместимым образом, то образуется другой,
+новый символ (с другим хешем).
+
+Для языка Си полный учет типов порождает довольно жесткую конструкцию.  Если тип
+изменяется условно совместимым образом, то желательно, чтобы символ остался прежним.
+Далее обсуждается, какой может быть \textit{облегченная} типизация.  Показано,
+что для реализации сборка с флагом \verb|-g| требуется только для библиотек.
+Однако сборка приложений с флагом \verb|-g| открывает интересные возможности
+для \textit{дополнительной} типизации.
+
 \section{Типизация}
 \section{Сопоставление}
 \section{Дополнительная типизация}
