typing: integers, const, structs and arrays

--- a/protva2016.tex
+++ b/protva2016.tex
@@ -3,6 +3,7 @@
 \usepackage[russian]{babel}
 \usepackage{url}
 \usepackage{fullpage}
+\usepackage{comment}
 
 \sloppy
 \hyphenpenalty=666
@@ -58,6 +59,53 @@ $R\subseteq P$.
 для \textit{дополнительной} типизации.
 
 \section{Типизация}
+Допустим, функция принимает аргумент типа \verb|int|; а в новой версии тип аргумента
+меняется на \verb|long|.  При этом функция сохраняет совместимость: ведь на 32-битных
+архитектурах \verb|int| и \verb|long|~--- это один и тот же тип.  На 64-битных архитектурах
+это два разных типа (32 и 64-битный), но при передаче параметра фактически используется
+64-битный тип~--- либо за счет передачи через регистр, либо за счет выравнивания на стеке
+\cite[с.\,23]{AMD64ABI}.
+\begin{comment}
+При этом возникает хороший вопрос: а не будет у нас мусора в старших битах?
+По крайней мере на x86-64 мусора не появляется, потому что "mov eax" автоматически
+очищает старшие биты.  Проверим, насколько серьезна проблема мусора в других случаях:
+\begin{verbatim}
+$ cat lib.c
+#include <stdio.h>
+void func(LIB_TYPE arg) { printf("%ld\n", (long) arg); }
+$ cat main.c
+extern void func(MAIN_TYPE arg);
+int main() { func(666); return 0; }
+$ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
+666
+\end{verbatim}
+Вроде нету мусора.
+\end{comment}
+Аналогично, при добавлении или удалении спецификатора \verb|unsigned|
+шансы нормального вызова остаются высокими.  Поэтому любой целочисленный
+аргумент наделяется типом \verb|i|.
+
+Рассмотрим теперь квалификатор \verb|const| вместе с аргументом типа \verb|char *| (Си-строка).
+При добавлении квалификатора совместимость сохраняется полностью, а при удалении совместимость
+ухудшается.  Мы сейчас выполнили \textit{структурное сравнение} на совместимость, которое противоречит
+принципу атомарности.  Ничего не остается, как только полностью исключить квалификатор \verb|const|
+из рассмотрения, признав его несущественным.  Но можно привести и другие аргументы в поддержку
+этого решения.
+Использование \verb|const| часто вызывает затруднения (кроме простейших случаев),
+см. напр. о типе \verb|argv| в \verb|getopt(3)|.
+В других языках вместо \verb|const| используется явное задание in/out параметров.
+В третьих языках, таких как Rust, отслеживается владение (ownership) объектами.
+Нам не хотелось бы признавать истинной ту или иную языковую абстракцию и проверять
+бинарную совместимость в соответствии с ее догмами.
+
+Рассмотрим типизацию структур, передающихся по значению.  У структуры часто бывает
+два имени: тег структуры и короткое имя, заданное через \verb|typedef|.  Но с точки
+зрения бинарной совместимости вообще не следует привязываться к имени.  Поэтому
+структуры наделяются типом \verb|bN|, где \verb|N|~--- размер структуры (\verb|sizeof|).
+
+Массивы типизируются как \verb|aT|, где \verb|T|~--- тип элемента массива (это касается
+только глобальных переменных; в параметрах массив преобразуется в указатель).
+
 \section{Сопоставление}
 \section{Дополнительная типизация}
 
@@ -71,6 +119,10 @@ $R\subseteq P$.
 \bibitem{Putze2007}
 Felix Putze, Peter Sanders, Johannes Singler (2007)\\
 Cache-, Hash- and Space-Efficient Bloom Filters
+
+\bibitem{AMD64ABI}
+Michael Matz et al.  System V Application Binary Interface.\\
+AMD64 Architecture Processor Supplement.  Draft Version 0.99.7
 
 \bibitem{dsohowto}
 Ulrich Drepper. How To Write Shared Libraries\\
