--- a/protva2016.tex
+++ b/protva2016.tex
@@ -87,7 +87,13 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 
 Рассмотрим теперь квалификатор \verb|const| вместе с аргументом типа \verb|char *| (Си-строка).
 При добавлении квалификатора совместимость сохраняется полностью, а при удалении совместимость
-ухудшается.  Мы сейчас выполнили \textit{структурное сравнение} на совместимость, которое противоречит
+ухудшается.
+\begin{comment}
+А может мы вообще должны были писать в эту строку, т.е. она была out-параметром?
+С какой радости тогда "совместимость сохраняется"?  Мы думали нам запишут в строку,
+а ее вместо этого берут как \verb|const|, смотрят что там в ней есть интересного.
+\end{comment}
+Мы сейчас выполнили \textit{структурное сравнение} на совместимость, которое противоречит
 принципу атомарности.  Ничего не остается, как только полностью исключить квалификатор \verb|const|
 из рассмотрения, признав его несущественным.  Но можно привести и другие аргументы в поддержку
 этого решения.
@@ -97,6 +103,11 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 В третьих языках, таких как Rust, отслеживается владение (ownership) объектами.
 Нам не хотелось бы признавать истинной ту или иную языковую абстракцию и проверять
 бинарную совместимость в соответствии с ее догмами.
+\begin{comment}
+Тем более что в языке Си строковые литералы имеют типа char[].
+Но модифицировать этот char строго запрещается, хотя он и не const.
+Хреновые догмы какие-то, хуже Халкидонских канонов.
+\end{comment}
 
 Рассмотрим типизацию структур, передающихся по значению.  У структуры часто бывает
 два имени: тег структуры и короткое имя, заданное через \verb|typedef|.  Но с точки
@@ -105,6 +116,26 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 
 Массивы типизируются как \verb|aT|, где \verb|T|~--- тип элемента массива (это касается
 только глобальных переменных; в параметрах массив преобразуется в указатель).
+
+Указатели тоже хотелось бы типизировать как \verb|pT|; однако, в отличие от массивов,
+тип \verb|T| может быть непрозрачным (opaque).  Кроме того, тип может быть полностью
+скрыт указателем \verb|void *|.  Получается, почти все указатели на данные должны
+иметь тип \verb|p|; можно лишь учитывать уровень косвенности (тогда, например,
+аргумент \verb|char *argv[]| будет иметь тип \verb|pp|).  Кроме того, указатели
+на функции можно типизировать полностью.  В качестве примера рассмотрим
+функцию \verb|signal(3)|:
+\begin{verbatim}
+    typedef void (*sighandler_t)(int);
+    sighandler_t signal(int signum, sighandler_t handler);
+\end{verbatim}
+Соответствующий ей символ наделяется типом так:
+\begin{verbatim}
+    signal (i, p(i)) -> p(i)
+\end{verbatim}
+\begin{comment}
+Это что же получается если бы handler возвращал значение, то было бы две стрелки,
+потипа right associative?  И точно ли никакой глупости не может быть с этими стрелками?
+\end{comment}
 
 \section{Сопоставление}
 \section{Дополнительная типизация}
