matching: on using ld.so

--- a/protva2016.tex
+++ b/protva2016.tex
@@ -138,6 +138,41 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 \end{comment}
 
 \section{Сопоставление}
+Как и в имеющейся реализации, для сопоставления требуемых символов с предоставляемыми
+используется загрузчик \verb|ld.so|~--- он запускается в специальном отладочном режиме,
+похожим на \verb|ldd(1)|.  Каждый требуемый символ наделяется типом
+соответствующего предоставляемого символа; подразумевается, что на стадии сборки
+типы символов соответствуют (по этой причине не требуется сборки клиентского кода
+с отладочной информацией).
+\begin{comment}
+Формат DWARF, кажется, вообще не предусматривает подробного описания вызова функций
+(приведение фактических параметров к формальным и т.\,п.).
+То есть нету там такого дела, чтобы было написано: дескать прямо перед вызовом
+функции foo() я вижу ее так-то, передаю ей такие-то аргументы, для некоторых
+из них выполняется cast.
+\end{comment}
+
+Однако такое сопоставление нельзя считать слабым местом всей конструкции.  Сборка
+пакетов является моментом \textit{наибольшего согласования} между клиентским и библиотечным
+кодом; при наличии несовместимости код не соберется, либо не отработает \texttt{make check}.
+Можно даже сказать, что одна из главных задач системы управления пакетами~--- это
+\emph{перенос гарантий}, достигнутых во время сборки, на другие конфигурации.
+А именно, с помощью бинарных зависимостей мы пытаемся гарантировать, что
+при запуске программы символы будут разрешаться в некотором смысле
+\emph{не хуже}, чем во время сборки.  Логично, что в обоих случаях используется
+загрузчик \verb|ld.so|.
+\begin{comment}
+Вообще само понятие бинарной совместимости следовало бы определить прежде всего
+исходя из этих терминов.  Если так подумать, то никакой другой бинарной совместимости
+просто больше и нету.  Ну если не брать совсем какие-нибудь высоколобые определения
+про семантику и т.п.  А если брать попроще, то вот сразу после сборки программа
+у нас работала.  И мы пытаемся "удержать" вокруг этой программы какие-то свойства
+сборочной среды, чтобы она и дальше работала.  А если программа перестает работать,
+то значит все, совместимость удержать не удалось, упустили мы бабу, то есть жарптицу
+всмысле.  Птицу счастья завтрашнего дня.  Сегодня программа работает, а завтра она глючит.
+Поль Мориа, любовь ушла.
+\end{comment}
+
 \section{Дополнительная типизация}
 
 \begin{thebibliography}{9}
