matching: on .rpm.proto section

--- a/protva2016.tex
+++ b/protva2016.tex
@@ -173,6 +173,21 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 Поль Мориа, любовь ушла.
 \end{comment}
 
+Рассмотрим теперь, как можно хранить типы символов.  Ведь \verb|debuginfo|-пакеты
+помещаются в отдельную компоненту репозитория, которая недоступна при сборке.
+Тогда можно было бы поместить отдельный файл с описанием символов в \verb|devel|-пакет.
+Однако хотелось бы иметь полностью автоматическое решение.  Поэтому предлагается
+хранить дополнительную информацию о символах в самих библиотеках, в специальной
+секции \verb|.rpm.proto|.  Эта секция даже не обязательно должна быть структурированной,
+как другие секции ELF; ее содержимое можно сжать, как это делается с секцией \verb|minisymtab|.
+Для сжатия небольших текстовых файлов особенно хорошо подходит алгоритм \verb|ppmd|.
+
+В современной разновидности формата ELF, в которой используется секция \verb|.gnu.hash|,
+экспортируемые символы в таблице \verb|.dynsym| упорядочены по значению хеша,
+а неопределенные символы сгруппированы в начале таблицы \cite[с.\,9]{dsohowto}.
+Это делает возможным особенно простое представление секции \verb|.rpm.proto|:
+начиная с \textit{первого экспортируемого символа}, записывать типы символов по одному на строку.
+
 \section{Дополнительная типизация}
 
 \begin{thebibliography}{9}
