--- a/protva2016.tex
+++ b/protva2016.tex
@@ -189,6 +189,15 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 начиная с \textit{первого экспортируемого символа}, записывать типы символов по одному на строку.
 
 \section{Дополнительная типизация}
+Дополнительная типизация не связана напрямую с символами.  С ее помощью можно попытаться
+контролировать типы данных.
+
+Пусть библиотека определяет какую-то структуру, а программа объявляет переменную этого типа.
+Тогда есть смысл контролировать размер этой структуры (так же, как при передаче структуры
+по значению).  Структуру можно считать связанной с библиотекой, если 1) она используется
+в аргументах какой-либо функции библиотеки; 2) во время сборки библиотеки заголовочный
+файл с определением этой структуры устанавливается в \verb|/usr/include|.  Тогда библиотека
+предоставляет \textit{псевдосимвол}, который описывает размер этой структуры.
 
 \begin{thebibliography}{9}
 
