--- a/protva2016.tex
+++ b/protva2016.tex
@@ -19,7 +19,7 @@
 позволяет контролировать наличие нужных символов в библиотеках.
 Показано, что реализация может быть расширена таким образом,
 чтобы учитывался и тип символа, а не только его имя; так чтобы
-обеспечивалось не только наличие нужных функций, но и совместимость
+обеспечить не только наличие нужных функций, но и совместимость
 их прототипов.
 \end{abstract}
 
@@ -54,7 +54,7 @@ $R\subseteq P$.
 Для языка Си полный учет типов порождает довольно жесткую конструкцию.  Если тип
 изменяется условно совместимым образом, то желательно, чтобы символ остался прежним.
 Далее обсуждается, какой может быть \textit{облегченная} типизация.  Показано,
-что для реализации сборка с флагом \verb|-g| требуется только для библиотек.
+что для ее реализации сборка с флагом \verb|-g| требуется только для библиотек.
 Однако сборка приложений с флагом \verb|-g| открывает интересные возможности
 для \textit{дополнительной} типизации.
 
