--- a/protva2016.tex
+++ b/protva2016.tex
@@ -140,7 +140,7 @@ $ gcc -m32 -DMAIN_TYPE=short -DLIB_TYPE=int -O main.c lib.c && ./a.out
 \section{Сопоставление}
 Как и в имеющейся реализации, для сопоставления требуемых символов с предоставляемыми
 используется загрузчик \verb|ld.so|~--- он запускается в специальном отладочном режиме,
-похожим на \verb|ldd(1)|.  Каждый требуемый символ наделяется типом
+похожем на \verb|ldd(1)|.  Каждый требуемый символ наделяется типом
 соответствующего предоставляемого символа; подразумевается, что на стадии сборки
 типы символов соответствуют (по этой причине не требуется сборки клиентского кода
 с отладочной информацией).
